# paal-CSV-parser

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  CSVIngest.cpp  CSVIngest.h  CsVParser.project  CurrentLocation.h  FileWatcher.cpp  FileWatcher.h  Outline.txt  Pig.cpp  Pig.h  PigPosture.cpp  PigPosture.h  README.md  ThreadPool.cpp  ThreadPool.h  dropped text.txt  main.cpp  run.sh  test_csv_parser  test_csv_parser.cpp  test_parser.cpp
cold_folder/: sdf.csv
